# NameAnalyzer

./: CMakeLists.txt  README.md  test_output.json  test_words.txt
include/: cli_parser.hpp  component_extractor.hpp  json_writer.hpp  markov_builder.hpp  ngram_extractor.hpp  syllable_detector.hpp  types.hpp  word_reader.hpp
src/: cli_parser.cpp  component_extractor.cpp  json_writer.cpp  main.cpp  markov_builder.cpp  ngram_extractor.cpp  syllable_detector.cpp  word_reader.cpp
